# gravipy

./: .gitignore  GRAVITY_DATA_2019_4_frame_simple.object  GRAVITY_SC_MAP_20200114.fits  GRAVITY_SC_MAP_20200114_SM65.fits  GRAVITY_SC_MAP_20200114_SM75.fits  GRAVITY_SC_MAP_20200124.fits  GRAVITY_SC_MAP_20200124_SM35.fits  GRAVITY_SC_MAP_20200124_SM45.fits  GRAVITY_SC_MAP_20200124_SM55.fits  GRAVITY_SC_MAP_DEFAULT.fits  LOWRES_bandpass_P1.fits  README.md  __init__.py  background_noise_LOW  background_noise_MED  gcorbits.py  gravdata.py  gravfit.py  gravmfit.py  gravmodel.py  obs_nights.py  phasecor.py  phasemap_zernike_20200629.npy  phasemap_zernike_20200817.npy  phasemap_zernike_20200907.npy  phasemap_zernike_20200922_diff.npy  pyproject.toml  setup.py  star_orbits.py  throughput  throughput_med
Datafiles/: GRAVITY_SC_MAP_20200306_SM45.fits  s2_orbit_082020.txt
Tutorial/: DataTutorial.ipynb  Fitting.ipynb
Tutorial/data/: GRAVI.2022-05-23T04:32:18.360_dualscivis_science_dualsciviscalibrated.fits  (+1 more)
gui/: fit_gui.py  fit_gui_new.py  gravi_fit.py  gui_utils.py  resources.qrc  resources_rc.py
met_corrections/: correction_fancy_median.npy  correction_fancy_median_2019.npy  correction_fancy_median_2021.npy  phasecorrection_sourcesubtracted_opd.npy
modeldata/: atmosphere  background_noise_LOW_new  background_noise_MED_new  throughput_mod
old_phasemaps/: phasemap_zernike_20200803.npy  phasemap_zernike_20200917_diff.npy
old_pm/: GRAVITY_SC_MAP_20200124_SM65.fits  GRAVITY_SC_MAP_20200124_SM75.fits
src/gravipy/: __init__.py  gcorbits.py  gravdata.py  gravfit.py  (+3 more)
(+45 files in other folders)
