[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gravipy"
version = "2.0.0"
readme = "README.rst"
authors = [
  {name = "Diogo Ribeiro", email = "dribeiro@mpe.mpg.de"},
  {name = "Felix Widmman"},
  {name = "Antonia Drescher"},
  {name = "Sebastiano Fallenberg"},
  {name = "Julia Stadler"},
]

maintainers = [
  {name = "Diogo Ribeiro", email = "dribeiro@mpe.mpg.de"}
]

license = {text = "MIT license"}

keywords = ["GRAVITY", "Interferometry", "VLTI", "VLT", "Astronomy", "Astrophysics"]

requires-python = ">=3.8"

dependencies = [
	"numpy>=1.20,<2.0",
	"scipy>=1.10",
  "matplotlib>=3.7",
	"h5py>=3.13",
	"astropy>=5.3",
  "lmfit>=1.2",
  "emcee>=3.1",

]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]
